v3.1.3 (xxxx-xx-xx)
-------------------

* fix endless loop when trying to create a collection with replicationFactor: -1

v3.1.2 (2016-11-24)
-------------------

* save a flag in the agency indicating that the system collection were created.
  this prevents hanging coordinators during startup when the system collections
  got into a bad state somehow

* adjust server failed job so it will cancel any shard movement jobs
  when a server became healthy again

* improve several cluster related log messages

* added support for descriptions field in Foxx dependencies

* enforce a user defined jwt when doing authentication in the cluster

* fixed a bug in the agency inception visible only under Windows. One has
  to wait until the RestServer maintenance mode is off, before we start
  the gossip protocol to find peers.

* (Enterprise only) fixed a bug in the statistic report for SmartGraph traversals.
  Now they state correctly how many documents were fetched from the index and how many
  have been filtered.

* Fixed increments of version in agent configurations.

* Startup mode of agency is explicitly set to persistence with inside
  agent configuration

* Fixed statistics for requests.

* Fixed race condition in processing of VelocyStream (vst) binary protocol.

v3.1.1 (2016-11-15)
-------------------

* obsolete --cluster.username and --cluster.password

* fixed issue #2176

* fixed issue #2168

* display index usage of traversals in AQL explainer output (previously missing)

* fixed isuse #2163

* preserve last-used HLC value across server starts

* allow more control over handling of pre-3.1 _rev values

  this changes the server startup option `--database.check-30-revisions` from a boolean (true/false)
  parameter to a string parameter with the following possible values:

  - "fail":
    will validate _rev values of 3.0 collections on collection loading and throw an exception when invalid _rev values are found.